--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
   build-and-test:
     strategy:
       matrix:
-        ARCH: [x86_64, i386, armhf, aarch64]
+        ARCH: [x86_64]
         BUILD_TYPE: ["appimage"]
         USE_STATIC_RUNTIME: [""]
 
